# IBC-RAG

./: .gitignore  README.md  insolvency_code_structured.json  pyproject.toml
chunking/: circular copy.py  circular.py  circular_merge.py  rules.py
config/: __init__.py  config.py
llm_model/: __init__.py  agent.py  anthropic_llm.py  base.py  config.py  factory.py  gemini_llm.py  openai_llm.py
models/: circular.py  web_search.py
prompts/: metadata_extraction.jinja  query_rewriting.jinja  relevance_analysis.jinja  research_note.jinja
scripts/: act_hybrid_search.py  act_parser.py  act_vectorizer.py  app.py  chunking_act.py  circular_loader.py  delete_hindi.py  merge_chunks_circular.py  metadata_extraction.py  process_rules.py  research_pipeline.py  search.py
scripts/old/: circular_loader.py  convert_pdfs.py  process_circular.py
services/embedding/: __init__.py  azure_embedder.py  base.py
services/pdf2md/: pdf_converter.py
services/vectordb/: __init__.py  base.py  chroma_store.py  circular_store.py  intialize.py
utils/: logging_utils.py
