[tool.poetry]
name = "ibc-rag"
version = "0.1.0"
description = ""
authors = ["kanak8278 <Kanak.Raj@thomsonreuters.com>"]
readme = "README.md"
packages = [{include = "ibc_rag"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.13"
pymupdf4llm = "^0.0.17"
pandas = "^2.2.3"
numpy = "^2.1.3"
openai = "^1.54.3"
anthropic = "^0.39.0"
tiktoken = "^0.8.0"
chromadb = "^0.5.18"
google-api-python-client = "^2.154.0"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.14.0"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
